--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body{
 
 .lista_link{
     margin: 0 2em;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
    
 }
 
@@ -176,3 +176,34 @@ body{
     color: var(--cor-de-fundo);
 }
 
+@media screen and (max-width: 768px){
+    .container{
+        display: block;
+        background-image: none;
+    }
+    .conteiner_imagem{
+        width: 50vw;
+    }
+    .container_caixa{
+        margin: 2em 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario_imagem{
+        width: 50vw;
+    }
+
+    .dispositivos_lista{
+        display: block;
+    }
+    
+    .rodape_lista{
+        display: block;
+    }
+
+ 
+}
